apps/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web
  namespace: infra
spec:
  gatewayClassName: envoygateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-proxy-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: web-gw
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: websecure-gw
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: alixroden-co-uk-tls
            kind: Secret
            namespace: cert-manager
