apps/envoy-gateway/httpredirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web
      namespace: infra
      sectionName: web-gw
  hostnames:
    - "*.alixroden.co.uk"
    - "alixroden.co.uk"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
